--- a/src/input.html
+++ b/src/input.html
@@ -7,27 +7,29 @@
     <link rel="stylesheet" href="../dist/output.css">
     <script src="https://kit.fontawesome.com/cf91e3a567.js" crossorigin="anonymous"></script>
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Diphylleia&family=Great+Vibes&family=Luckiest+Guy&family=Protest+Riot&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Diphylleia&family=Great+Vibes&family=Luckiest+Guy&family=Protest+Riot&display=swap');
 
 
-:where(.nav, .itemcontent, .error) {
+        :where(.nav, .itemcontent, .error) {
             font-family: 'Comfortaa', sans-serif;
         }
 
         .cartitems1 {
             display: flex;
         }
-        .hero-content{
+
+        .hero-content {
             font-family: 'Luckiest Guy', cursive;
         }
 
         .scrollbar::-webkit-scrollbar {
             display: none;
         }
-       :is(.logo,.head){
-        font-family: 'Great Vibes', cursive;
-    
-    }
+
+        :is(.logo, .head) {
+            font-family: 'Great Vibes', cursive;
+
+        }
     </style>
     <title>Restaurant 🍔</title>
 </head>
@@ -41,11 +43,12 @@
                 class="button text-white text-xl p-1 rounded-md cursor-pointer hover:text-gray-200 hover:bg-orange-600">
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
-        </div>
+        </div> 
+        
         <!-- head image  -->
         <div
             class="head-image flex justify-center items-center w-full h-[500px] bg-[url('../dist/Image/Emilio_Pandika___IMG_7973_HDR.20.jpg')] bg-cover relative bg-center">
-            <div class="overlayy bg-gradient-to-r from-gray-500 to-gray-500 w-full h-full opacity-25 absolute " ></div>
+            <div class="overlayy bg-gradient-to-r from-gray-500 to-gray-500 w-full h-full opacity-25 absolute "></div>
             <p class="text-white text-3xl lg:text-[50px] hero-content  text-center">
                 Food is like a language, it communicates so much.
             </p>
@@ -62,7 +65,8 @@
         <div class="container2 pt-3 flex flex-col">
             <p class=" text-[40px] lg:text-[50px] text-center head text-orange-600">Food Items</p>
             <div id="fooditems" class="box-border">
-                <ul id="ul" class=" grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-3 py-6 px-6 sm:px-16 lg:px-24">
+                <ul id="ul"
+                    class=" grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-3 py-6 px-6 sm:px-16 lg:px-24">
 
                 </ul>
             </div>
